Shoes Shopping Mall

--- a/index.html
+++ b/index.html
@@ -22,7 +22,43 @@
     </div>
 
     <div class="icons">
-        <img src="img/magnifying-glass-solid.svg" alt="gear">
+
+        <div class="search">
+            <img src="img/icon/magnifying-glass-solid.svg" alt="gear">
+        </div>
+
+        <div class="cart">
+            <a href="#"><img src="img/icon/icons8-cart-50.png" alt="icons8-cart-50"></a>
+        </div>
+
+        <div class="user">
+            <a href="#"><img src="img/icon/user.png" alt="user"></a>
+        </div>
+
+        <div class="menu">
+            <img src="img/icon/icons8-menu-24.png" alt="menu">
+        </div>
+    </div>
+
+    <div class="left-side">
+        <p>Summer</p>
+        <span>collections</span>
+
+        <div class="year">
+            <h1>2024</h1>
+        </div>
+
+        <div class="main">
+            <p>Find Your shoes  from our various collection here shoes are endless and profit is also endless.</p>
+        </div>
+
+        <div class="shop_btn">
+            <button><a href="#">Shop Now</a></button>
+        </div>
+    </div>
+
+    <div class="right-side">
+
     </div>
 </body>
 </html>
