--- a/index.html
+++ b/index.html
@@ -58,7 +58,36 @@
     </div>
 
     <div class="right-side">
+        <div class="puma">
+            <img src="img/puma.jpg" alt="puma">
+        </div>
 
+        <div class="puma_text">
+            <h1>PUMA</h1>
+            <p>120 $</p>
+            <button><a href="#">Buy Now</a></button>
+        </div>
+    </div>
+
+    <div class="first_foot">
+        <div class="first_foot_one">
+            <h1>21k+</h1>
+            <p>Orders Complete</p>
+        </div>
+    </div>
+
+    <div class="second_foot">
+        <div class="second_foot_one">
+            <h1>40M+</h1>
+            <p>Happy Customers</p>
+        </div>
+    </div>
+
+    <div class="third_foot">
+        <div class="third_foot_one">
+            <h1>900k+</h1>
+            <p>Regular Visitors</p>
+        </div>
     </div>
 </body>
 </html>
