--- a/index.html
+++ b/index.html
@@ -89,5 +89,48 @@
             <p>Regular Visitors</p>
         </div>
     </div>
+v>
+
+    <div class="offer">
+        <h1>What We <span>Offer</span></h1>
+
+        <div class="offer_container">
+            <div class="grid1">
+                <div class="grid1_img">
+                    <img src="img/icon/cash.jpg" alt="cash">
+            </div>
+                <span>Cash Back</span>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, dolorum, voluptatibus</p>
+            </div>
+            <div class="grid2">
+                <div class="grid2_img">
+                    <img src="img/icon/images.png" alt="support">
+                </div>
+
+                <span>24/7 Support</span>
+
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit quasi nobis mollitia</p>
+            </div>
+            <div class="grid3">
+                <div class="grid3_img">
+                    <img src="img/icon/discount.png" alt="discount">
+                </div>
+
+                <span>Monthly Offer</span>
+
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum voluptatem cumque</p>
+            </div>
+            <div class="grid4">
+                <div class="grid4_img">
+                    <img src="img/icon/membership.png" alt="membership">
+                </div>
+
+                <span>Membership</span>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis tempora, laboriosam</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
