--- a/index.html
+++ b/index.html
@@ -140,5 +140,55 @@
             </div>
         </div>
     </div>
+
+    <div class="our_collection">
+        <h1>Our <span>Collection</span></h1>
+
+        <div class="collection_link">
+            <ul>
+                <li><a href="#" class="active">Men</a></li>
+                <li><a href="#">Women</a></li>
+                <li><a href="#">Kids</a></li>
+            </ul>
+        </div>
+
+        <div class="overview">
+            <div class="airmax">
+                <div class="artem">
+                    <img src="img/artem-bondarchuk-XPBYi4K8vFI-unsplash.jpg" alt="artem">
+                </div>
+            </div>
+
+            <div class="jordan">
+                <div class="daniel">
+                    <img src="img/albert-vincent-wu-F24cC3HK6Rc-unsplash.jpg" alt="daniel">
+                </div>
+            </div>
+
+            <div class="airjordan">
+                <div class="filipe">
+                    <img src="img/felipepelaquim-6zO5VKogoZE-unsplash.jpg" alt="filipe">
+                </div>
+            </div>
+
+            <div class="airlike">
+                <div class="hermes">
+                    <img src="img/klim-musalimov-CMGKxMmZcRk-unsplash.jpg" alt="hermes">
+                </div>
+            </div>
+
+            <div class="jordans">
+                <div class="imani">
+                    <img src="img/imani-bahati-LxVxPA1LOVM-unsplash.jpg" alt="imani">
+                </div>
+            </div>
+
+            <div class="airjord">
+                <div class="karsten">
+                    <img src="img/loita-george-spHPsH1qxvA-unsplash.jpg" alt="karsten">
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
