--- a/index.html
+++ b/index.html
@@ -189,6 +189,55 @@
                 </div>
             </div>
         </div>
+        <div class="load_more">
+            <button><a href="#">Load More</a></button>
+        </div>
+    </div>
+
+    <div class="client">
+        <h1>What Our <span>Client Say</span></h1>
+        <p>About Us</p>
+
+        <div class="client_container">
+            <div class="left">
+                <img src="img/cross.jpg" alt="cross">
+
+                <div class="profile_info">
+                    <p>Ishimwe</p>
+                    <span>Analytics</span>
+                </div>
+
+                <div class="left_msg">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quia illum molestiae. Vero quidem, magnam consequuntur explicabo neque officia excepturi aut quasi corrupti ipsam quas accusantium porro voluptas adipisci perferendis!</p>
+                </div>
+            </div>
+
+            <div class="center">
+                <img src="img/cross.jpg" alt="cross">
+
+                <div class="profile_info">
+                    <p>Ishimwe</p>
+                    <span>Analytics</span>
+                </div>
+
+                <div class="center_msg">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quia illum molestiae. Vero quidem, magnam consequuntur explicabo neque officia excepturi aut quasi corrupti ipsam quas accusantium porro voluptas adipisci perferendis!</p>
+                </div>
+            </div>
+
+            <div class="right">
+                <img src="img/cross.jpg" alt="cross">
+
+                <div class="profile_info">
+                    <p>Ishimwe</p>
+                    <span>Analytics</span>
+                </div>
+
+                <div class="center_msg">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio quia illum molestiae. Vero quidem, magnam consequuntur explicabo neque officia excepturi aut quasi corrupti ipsam quas accusantium porro voluptas adipisci perferendis!</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
