--- a/index.html
+++ b/index.html
@@ -241,7 +241,17 @@
     </div>
 
     <div class="join">
-        
+        <div class="full_join">
+            <img src="img/varun-dubey-JXsKGVVuZXc-unsplash.jpg" alt="full">
+        </div>
+    </div>
+
+    <div class="letter">
+        <h1>Join Our <span>News Letter</span></h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eum debitis libero rerum nostrum numquam</p>
+
+        <input type="email" name="email" id="email" placeholder="Email Please">
+        <button>Submit</button>
     </div>
 </body>
 </html>
