--- a/index.html
+++ b/index.html
@@ -248,10 +248,23 @@
 
     <div class="letter">
         <h1>Join Our <span>News Letter</span></h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis eum debitis libero rerum nostrum numquam</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <p id="nobis">Nobis eum debitis libero rerum nostrum numquam</p></p>
 
         <input type="email" name="email" id="email" placeholder="Email Please">
         <button>Submit</button>
+    </div>
+
+    <div class="footer">
+        <div id="left">
+            <div id="logo">
+                <img src="img/profile1.png" alt="profile">
+            </div>
+
+            <div id="lorem">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <span>Nobis eum debitis libero rerum nostrum numquam</span>
+            </div>
+        </div>
     </div>
 </body>
 </html>
