--- a/index.html
+++ b/index.html
@@ -264,7 +264,36 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <span>Nobis eum debitis libero rerum nostrum numquam</span>
             </div>
+
+            <div class="social_platform">
+                <div class="flex_items">
+                    <a href="#"> <img src="img/icon/whatsapp.png" alt="whatsapp"></a>
+                </div>
+                <div class="flex_items">
+                    <a href="#"><img src="img/icon/instagram.png" alt="instagram"></a>
+                </div>
+                <div class="flex_items">
+                    <a href="#"><img src="img/icon/facebook.png" alt="facebook"></a>
+                </div>
+            </div>
+        </div>
+
+        <div id="center">
+            <h1>Quickly Link</h1>
+            <div id="navigation">
+                <ul>
+                    <li>
+                        <a href="#">Home</a>
+                        <a href="#">About Us</a>
+                        <a href="#">Shop</a>
+                        <a href="#">Collection</a>
+                        <a href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
+
+    
 </body>
 </html>
