--- a/index.html
+++ b/index.html
@@ -292,6 +292,22 @@
                 </ul>
             </div>
         </div>
+
+        <div id="right">
+            <h1>Connect With Us</h1>
+
+            <form method="post">
+                <input type="email" name="email" id="email" placeholder="Email"><br><br>
+
+                <input type="number" name="phone_number" id="phone_number" placeholder="Phone Number"><br><br>
+
+                <input type="submit" value="Submit" class="submit">
+            </form>
+        </div>
+
+        <div class="suber">
+            <p><i>Fabrice copyright 2024</i></p>
+        </div>
     </div>
 
     
